/*
Copyright 2019 The Alcor Authors.

Licensed under the Apache License, Version 2.0 (the "License");
        you may not use this file except in compliance with the License.
        You may obtain a copy of the License at

        http://www.apache.org/licenses/LICENSE-2.0

        Unless required by applicable law or agreed to in writing, software
        distributed under the License is distributed on an "AS IS" BASIS,
        WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
        See the License for the specific language governing permissions and
        limitations under the License.
*/

syntax = "proto3";

package alcor.schema;

option java_package = "com.futurewei.alcor.schema";
option java_outer_classname = "Vpc";

import "common.proto";

message VpcConfiguration {
    uint32 format_version = 1;
    uint32 revision_number = 2;

    string request_id = 3;
    string id = 4;
    string project_id = 5;
    string name = 6;
    string cidr = 7;
    int64 tunnel_id = 8;

    message SubnetId {
        string id = 1;
    }

    message Route {
        string destination = 1;
        string next_hop = 2;
    }

    repeated SubnetId subnet_ids = 9;
    repeated Route routes = 10;
}

message VpcState {
    OperationType operation_type = 1;
    VpcConfiguration configuration = 2;
}
