syntax = "proto3";

package aliothcontroller;

option java_package = "com.futurewei.alioth.controller.schema";
option java_outer_classname = "SecurityGroup";

import "common.proto";

message SecurityGroupConfiguration {
  int32 version = 1;

  string project_id = 2;
  string vpc_id = 3;
  string id = 4;
  string name = 5;

  enum Direction {
    EGRESS = 0;
    INGRESS = 1;
  }

  message SecurityGroupRule {
    string security_group_id = 1;
    string id = 2;
    Direction direction = 3;
    EtherType ethertype = 4;
    Protocol protocol = 5;

    int32 port_range_min = 6;
    int32 port_range_max = 7;
    string remote_ip_prefix = 8;
    string remote_group_id = 9;
  }
 
  repeated SecurityGroupRule security_group_rules = 6;
}

message SecurityGroupState {
  OperationType operation_type = 1;
  SecurityGroupConfiguration configuration = 2;
}
